[gd_scene load_steps=13 format=3 uid="uid://bi1htbn8ci5sv"]

[ext_resource type="Script" uid="uid://urse3yae0rg2" path="res://Scripts/Player/player_script.gd" id="1_n0ou7"]
[ext_resource type="Texture2D" uid="uid://ktv4awsmjjnm" path="res://Assets/Img/Player/idle-sheet2.png" id="2_gturr"]
[ext_resource type="PackedScene" uid="uid://c7law1ctxchbm" path="res://Scenes/Inventory/inventory_ui_.tscn" id="3_yyjcl"]
[ext_resource type="PackedScene" uid="uid://ccsftij8njioh" path="res://Scenes/state_machine.tscn" id="5_ouq74"]
[ext_resource type="Script" uid="uid://dle8nwmx74ywb" path="res://Scripts/Player/States/state_idle.gd" id="6_d8vbv"]
[ext_resource type="Script" uid="uid://b6s4jrd6ofms1" path="res://Scripts/Player/States/state_walk.gd" id="7_udfd3"]
[ext_resource type="Script" uid="uid://b5ump6yr3h3rl" path="res://Scripts/Global/global.gd" id="8_0d5wa"]

[sub_resource type="Animation" id="Animation_cyodd"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_7too6"]
resource_name = "move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qb0kh"]
_data = {
&"idle": SubResource("Animation_cyodd"),
&"move": SubResource("Animation_7too6")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iuk7w"]
radius = 24.0
height = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_liky7"]
radius = 19.0
height = 56.3636

[node name="Player" type="CharacterBody2D" groups=["character"]]
position = Vector2(84, 40)
collision_layer = 3
collision_mask = 63
motion_mode = 1
safe_margin = 0.5
script = ExtResource("1_n0ou7")

[node name="Astro2b" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(0, 8)
texture = ExtResource("2_gturr")
hframes = 7
frame = 1

[node name="Animation" type="AnimationPlayer" parent="Astro2b"]
libraries = {
&"": SubResource("AnimationLibrary_qb0kh")
}
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="." groups=["character"]]
visible = false
position = Vector2(3, -1)
collision_layer = 3
collision_mask = 31

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_iuk7w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 12)
scale = Vector2(1.1, 1.1)
shape = SubResource("CapsuleShape2D_liky7")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Interact_UI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Interact_UI"]
offset_left = 859.0
offset_top = 478.0
offset_right = 924.0
offset_bottom = 518.0
color = Color(0.854634, 0.854634, 0.854634, 0.65098)

[node name="Label" type="Label" parent="Interact_UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 290.0
offset_top = 104.0
offset_right = 353.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "Menu int"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory_" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="Inventory_"]
custom_minimum_size = Vector2(450, 380)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -187.0
offset_right = 210.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.39, 0.512, 1, 0.211765)

[node name="Label" type="Label" parent="Inventory_/ColorRect"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 0
offset_top = 9.0
offset_right = 413.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 27
text = "Inventario"
horizontal_alignment = 1

[node name="Inventory_UI_" parent="Inventory_/ColorRect" instance=ExtResource("3_yyjcl")]
layout_mode = 1

[node name="StateMachine" parent="." node_paths=PackedStringArray("default_state") instance=ExtResource("5_ouq74")]
default_state = NodePath("PlayerStateIdle")

[node name="PlayerStateIdle" type="Node" parent="StateMachine"]
script = ExtResource("6_d8vbv")

[node name="PlayerStateWalking" type="Node" parent="StateMachine"]
script = ExtResource("7_udfd3")

[node name="Global_Stettings" type="Node" parent="."]
script = ExtResource("8_0d5wa")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
